# MMGJ12.2023_NowhereToRun

./: .gitignore  .gitmodules  CMakeLists.txt  Credits.md  Deploy.py  Main.tscn  Menu.tscn  Nowhere To Run.csproj  Nowhere To Run.sln  NowhereToRun.ini  README.md  export_presets.cfg  icon.svg.import  project.godot
Assets/: Blast.png.import  Grenade.png.import  MessageBG.png.import  MessageDead.png.import  MessageGo.png.import  MessageLevelComplete.png.import  MessageReady.png.import
Assets/Characters/: CharacterDeaths.png.import  EnemyEmpty.png.import  EnemyGrenade.png.import  EnemyPistol.png.import  Player.png.import  PlayerAnimations.tres
Assets/Fonts/: Arial.fnt  Arial.fnt.import  Arial_0.png.import  SmallFont.fnt
Assets/Level/: LevelBG.png.import  LevelBG_WallDestoyed.png.import  StreetLights.png.import
Assets/Menu/: Background.png.import  OptionAbout.png.import  OptionAboutSelected.png.import  OptionContinue.png.import  OptionContinueSelected.png.import  OptionCredits.png.import  OptionCreditsSelected.png.import  OptionExit.png.import  OptionExitSelected.png.import  OptionGoBack.png.import  OptionGoBackSelected.png.import  OptionHighscores.png.import  OptionHighscoresSelected.png.import  OptionOptions.png.import  OptionOptionsSelected.png.import  OptionStartGame.png.import  OptionStartGameSelected.png.import  Title.png.import
Assets/Music/: Gameplay.wav.import  Gameplay1.wav.import  Gameplay2.wav.import  LevelStart.wav.import  Menu.wav.import
Assets/Sounds/: Dead.wav.import  Explode.wav.import  GO.wav.import  Ready.wav.import  Shoot.wav.import  Steps.wav.import
GameObjects/: Grenade.tscn  Projectile.tscn
GameObjects/Characters/: EnemiesAnimations.tres  Enemy.tscn  Player.tscn
Shaders/: FrameBuffer.frag  FrameBuffer.vert  Shapes.frag  Shapes.vert  Sprite.frag  Sprite.vert  frag.glsl  quantize.glsl  vert.glsl
Sources/: CMakeConfig.h  CMakeConfig.h.in  GlobalGameState.cs  Grenade.cs  Main.cpp  Main.cs  Menu.cs  Projectile.cs  main.c
Sources/Characters/: Character.cs  Enemy.cs  Player.cs
Sources/Engine/: Color.cpp  Color.h  Engine.cpp  Engine.h  Render.cpp  Render.h  Shapes.h  Sprite.cpp  Sprite.h
Sources/Engine/GraphicLibraries/: OpenGL.cpp  OpenGL.h  Texture.cpp  Texture.h
Sources/Engine/GraphicLibraries/Shaders/: ShaderProgram.cpp  ShaderProgram.h  ShaderVec4.cpp  ShaderVec4.h
Sources/Engine/Input/: BtnState.h  Input.cpp  Input.h  InputKeys.h
Sources/Engine/Math/: Math.h  Vector2.cpp  Vector2.h
Sources/Engine/Objects/: GameObject.cpp  GameObject.h
Sources/Game/: Game.cpp  Game.h  Menu.cpp  Menu.h  Player.cpp  Player.h
Sources/Game/Menu/: Menu.cpp  Menu.h  MenuOption.cpp  MenuOption.h
